--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -518,6 +518,9 @@ a {
 .mb-15p {
   margin-bottom: 15%;
 }
+.mb-20p {
+  margin-bottom: 20%;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -689,9 +692,6 @@ a {
 .bg-cover {
   background-size: cover;
 }
-.bg-center {
-  background-position: center;
-}
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
@@ -740,10 +740,6 @@ a {
 .py-15p {
   padding-top: 15%;
   padding-bottom: 15%;
-}
-.py-1p {
-  padding-top: 1%;
-  padding-bottom: 1%;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -1300,6 +1296,9 @@ footer {
   .sm\:mt-30p {
     margin-top: 30%;
   }
+  .sm\:mt-5p {
+    margin-top: 5%;
+  }
   .sm\:block {
     display: block;
   }
@@ -1342,6 +1341,9 @@ footer {
   .sm\:pb-0 {
     padding-bottom: 0px;
   }
+  .sm\:pb-10p {
+    padding-bottom: 10%;
+  }
   .sm\:pb-1p {
     padding-bottom: 1%;
   }
@@ -1369,6 +1371,10 @@ footer {
   .sm\:pt-5p {
     padding-top: 5%;
   }
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 1.2;
+  }
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 1;
@@ -1390,6 +1396,9 @@ footer {
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
+  }
+  .md\:mb-15p {
+    margin-bottom: 15%;
   }
   .md\:mt-5p {
     margin-top: 5%;
@@ -1423,14 +1432,42 @@ footer {
 }
 
 @media (min-width: 1280px) {
+  .xl\:mb-10p {
+    margin-bottom: 10%;
+  }
   .xl\:mt-0 {
     margin-top: 0px;
+  }
+  .xl\:mt-2p {
+    margin-top: 2%;
   }
   .xl\:h-\[45rem\] {
     height: 45rem;
   }
+  .xl\:py-2p {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  .xl\:pb-2p {
+    padding-bottom: 2%;
+  }
+  .xl\:pb-5p {
+    padding-bottom: 5%;
+  }
   .xl\:pt-5p {
     padding-top: 5%;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:mb-1p {
+    margin-bottom: 1%;
+  }
+  .\32xl\:mt-1p {
+    margin-top: 1%;
+  }
+  .\32xl\:pb-1p {
+    padding-bottom: 1%;
   }
 }
 
