--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -486,12 +486,6 @@ a {
 .col-span-full {
   grid-column: 1 / -1;
 }
-.row-span-1 {
-  grid-row: span 1 / span 1;
-}
-.row-span-2 {
-  grid-row: span 2 / span 2;
-}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -584,6 +578,9 @@ a {
 .min-h-30 {
   min-height: 30vh;
 }
+.min-h-40 {
+  min-height: 40vh;
+}
 .w-48 {
   width: 12rem;
 }
@@ -607,9 +604,6 @@ a {
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -744,10 +738,6 @@ a {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-2p {
-  padding-top: 2%;
-  padding-bottom: 2%;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -1284,6 +1274,15 @@ footer {
   .sm\:order-none {
     order: 0;
   }
+  .sm\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .sm\:row-span-1 {
+    grid-row: span 1 / span 1;
+  }
+  .sm\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
   .sm\:mb-0 {
     margin-bottom: 0px;
   }
@@ -1292,6 +1291,9 @@ footer {
   }
   .sm\:mb-5p {
     margin-bottom: 5%;
+  }
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
   .sm\:mt-10p {
     margin-top: 10%;
@@ -1329,16 +1331,18 @@ footer {
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .sm\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
   .sm\:rounded-3xl {
     border-radius: 1.5rem;
   }
   .sm\:py-10p {
     padding-top: 10%;
     padding-bottom: 10%;
-  }
-  .sm\:py-1p {
-    padding-top: 1%;
-    padding-bottom: 1%;
   }
   .sm\:py-2p {
     padding-top: 2%;
@@ -1370,9 +1374,6 @@ footer {
   }
   .sm\:pt-10p {
     padding-top: 10%;
-  }
-  .sm\:pt-2p {
-    padding-top: 2%;
   }
   .sm\:pt-5p {
     padding-top: 5%;
@@ -1415,6 +1416,15 @@ footer {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .md\:pb-10p {
+    padding-bottom: 10%;
+  }
+  .md\:pb-2p {
+    padding-bottom: 2%;
+  }
+  .md\:pb-5p {
+    padding-bottom: 5%;
+  }
   .md\:pt-10p {
     padding-top: 10%;
   }
@@ -1431,8 +1441,17 @@ footer {
   .lg\:pb-10p {
     padding-bottom: 10%;
   }
+  .lg\:pb-5p {
+    padding-bottom: 5%;
+  }
   .lg\:pt-0 {
     padding-top: 0px;
+  }
+  .lg\:pt-2p {
+    padding-top: 2%;
+  }
+  .lg\:pt-5p {
+    padding-top: 5%;
   }
   .lg\:text-6xl {
     font-size: 3.75rem;
@@ -1460,6 +1479,12 @@ footer {
     padding-top: 2%;
     padding-bottom: 2%;
   }
+  .xl\:pb-0 {
+    padding-bottom: 0px;
+  }
+  .xl\:pb-10p {
+    padding-bottom: 10%;
+  }
   .xl\:pb-2p {
     padding-bottom: 2%;
   }
@@ -1475,8 +1500,21 @@ footer {
   .\32xl\:mt-1p {
     margin-top: 1%;
   }
+  .\32xl\:py-5p {
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
   .\32xl\:pb-1p {
     padding-bottom: 1%;
+  }
+  .\32xl\:pb-2p {
+    padding-bottom: 2%;
+  }
+  .\32xl\:pb-5p {
+    padding-bottom: 5%;
+  }
+  .\32xl\:pt-5p {
+    padding-top: 5%;
   }
 }
 
