--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,15 +1,15 @@
-<section class="header-container fixed w-full z-50">
-    <div class="header-content max-w-screen-2xl mx-auto flex justify-between items-center px-5 py-2">
-      <a href="/index.html" aria-label="Go to homepage" class="z-30">
-        <img src="/images/logo-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-48">
-      </a>
-      
-      <div class="text-right">
-        <div class="hamburger-wrapper">
-          <div class="hamburger-menu">
-            <span></span>
-            <span></span>
-            <span></span>
+<section class="max-w-screen-2xl mx-auto flex justify-between items-center fixed z-50 top-0 left-0 right-0 header-bg">
+    <div class="flex items-center justify-between w-full px-5p py-2p">
+        <a href="/index.html" aria-label="Go to homepage" class="z-30">
+            <img src="/images/logo-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-36 sm:w-48">
+        </a>
+        
+        <div class="text-right">
+            <div class="hamburger-wrapper">
+                <div class="hamburger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
           </div>
         </div>
       </div>
