--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -459,6 +459,9 @@ a {
 .right-0 {
   right: 0px;
 }
+.top-0 {
+  top: 0px;
+}
 .z-30 {
   z-index: 30;
 }
@@ -719,10 +722,6 @@ a {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
@@ -738,6 +737,10 @@ a {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-2p {
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -880,14 +883,6 @@ body {
   }
 }
 
-/* Header container to respect max-width */
-.header-container {
-  max-width: 1600px; 
-  margin: 0 auto; 
-  padding: 0 20px; 
-  position: relative; 
-}
-
 /* Fixed header styles */
 header {
   width: 100% !important; /* Full width for the header */
@@ -896,30 +891,16 @@ header {
   z-index: 50;
 }
 
-.fixed {
-  width: 100% !important; /* Ensure full width */
-  position: fixed !important;
-  top: 0 !important;
-  z-index: 50 !important;
-  background: #FFFDFF !important; /* Background color */
-}
-
-/* Additional styling to ensure header content is centered */
-.header-content {
-  max-width: 1600px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-
 .mobile-menu {
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 50;
     background:  #FFFDFF; 
+}
+
+.header-bg {
+  background-color: #FFFDFF; 
 }
 
 .header-font {
@@ -1034,7 +1015,6 @@ header {
 .hamburger-wrapper {
   cursor: pointer;
   display: inline-block;
-  position: fixed;
   top: 1rem; /* Adjust as needed */
   right: 1rem; /* Adjust as needed */
   z-index: 1000;
@@ -1073,7 +1053,7 @@ header {
 }
 
 .mobile-menu.active {
-  right: 45px; 
+  right: -24px; 
 }
 
 .mobile-menu-content {
