--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -45,9 +45,9 @@
             <a href="/meet-the-team.html" class="pt-5p">Get to Know Us</a>
             <div class="submenu">
                 <a href="/meet-the-team.html" class="pl-5p pb-2p">Meet Our Team</a>
-                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Purpose</a>
-                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Promise</a>
-                <a href="/purpose-promise-values.html" class="pl-5p pb-2p">Our Values</a>
+                <a href="/purpose-promise-values.html#purpose" class="pl-5p pb-2p">Our Purpose</a>
+                <a href="/purpose-promise-values.htmlpromise" class="pl-5p pb-2p">Our Promise</a>
+                <a href="/purpose-promise-values.html#values" class="pl-5p pb-2p">Our Values</a>
             </div>
             <a href="/safety-management.html" class="pt-5p">Safety Management</a>
             <a href="/contact.html" class="pt-5p">Contact Us</a>
