--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -880,6 +880,7 @@ body {
     background-color: #FFFDFF; 
     color:  #033357; 
     font-family: "Source Sans 3", sans-serif;
+    overflow-x: hidden;
 }
 
 /* Ensure max-width and centering for larger screens */
