--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -508,6 +508,9 @@ a {
 .mb-15p {
   margin-bottom: 15%;
 }
+.mb-1p {
+  margin-bottom: 1%;
+}
 .mb-20p {
   margin-bottom: 20%;
 }
@@ -594,6 +597,9 @@ a {
 }
 .grow {
   flex-grow: 1;
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .list-disc {
   list-style-type: disc;
@@ -747,6 +753,10 @@ a {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.py-2p {
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -858,6 +868,17 @@ a {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -1279,6 +1300,12 @@ footer {
   
 }
 
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1518,10 +1545,6 @@ footer {
   }
   .xl\:h-\[45rem\] {
     height: 45rem;
-  }
-  .xl\:py-2p {
-    padding-top: 2%;
-    padding-bottom: 2%;
   }
   .xl\:pb-0 {
     padding-bottom: 0px;
