--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -583,8 +583,8 @@ a {
 .min-h-40 {
   min-height: 40vh;
 }
-.w-36 {
-  width: 9rem;
+.w-44 {
+  width: 11rem;
 }
 .w-48 {
   width: 12rem;
@@ -1044,7 +1044,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 24px;
+  width: 22px;
   height: 20px;
 }
 
@@ -1199,23 +1199,27 @@ footer {
 .header-logo-position {
   padding-left: 5%;
   padding-right: 5%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 4%;
+  padding-bottom: 0%;
 }
 
 .hamburger-wrapper {
   cursor: pointer;
   display: inline-block;
   position: absolute;
-  top: 38%;
+  top: 48%;
   right: 19%;
   z-index: 1000;
 }
 
 @media (min-width:350px) {
 
+  .header-margin{
+    margin-top: 28%;
+  }
+
   .header-logo-position {
-    padding-top: 7%;
+    padding-top: 5%;
   }
 
   .hamburger-wrapper {
@@ -1281,7 +1285,15 @@ footer {
   }
 
   .header-margin{
-    margin-top: 15%;
+    margin-top: 24%;
+  }
+
+}
+
+@media (min-width:700px) {
+
+  .header-margin{
+    margin-top: 22%;
   }
 
 }
