--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -502,6 +502,12 @@ a {
   margin-top: 10%;
   margin-bottom: 10%;
 }
+.-mr-10p {
+  margin-right: -10%;
+}
+.-mr-15p {
+  margin-right: -15%;
+}
 .mb-10p {
   margin-bottom: 10%;
 }
@@ -568,17 +574,14 @@ a {
 .h-48 {
   height: 12rem;
 }
-.h-\[34rem\] {
-  height: 34rem;
+.h-80 {
+  height: 20rem;
 }
 .h-full {
   height: 100%;
 }
 .h-lvh {
   height: 100lvh;
-}
-.h-80 {
-  height: 20rem;
 }
 .min-h-30 {
   min-height: 30vh;
@@ -643,6 +646,9 @@ a {
 .gap-1 {
   gap: 0.25rem;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-5 {
   gap: 1.25rem;
 }
@@ -651,9 +657,6 @@ a {
 }
 .gap-6 {
   gap: 1.5rem;
-}
-.gap-2 {
-  gap: 0.5rem;
 }
 .gap-y-5 {
   row-gap: 1.25rem;
@@ -1065,21 +1068,22 @@ header {
   display: fixed;
   background-color: #033357; /* Dark blue background */
   color: #FFFDFF; /* Light text color */
-  padding: 1rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
   position: fixed;
   top: 0;
   right: -500px; /* Initially hidden off-screen */
   width: 300px; /* Width of the menu */
-  height: 100vh;
+  height: 841px;
   text-align: left;
   overflow-y: auto;
   z-index: 50;
-  transition: right 0.3s ease; /* Slide effect */
+  transition: right 0.7s ease; /* Slide effect */
   border-left: 4px solid #D2AE39; /* Yellow left border */
 }
 
 .mobile-menu.active {
-  right: -24px; 
+  right: 38px; 
 }
 
 .mobile-menu-content {
@@ -1094,7 +1098,7 @@ header {
   /* padding: 1rem; */
   display: block;
   font-weight: normal;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .submenu {
@@ -1119,8 +1123,8 @@ header {
   color: #FFFDFF; /* Light text color */
   font-size: 2rem; /* Size of the close icon */
   position: absolute; /* Position it in the top-right corner */
-  top: 1rem; /* Adjust as needed */
-  right: 1rem; /* Adjust as needed */
+  top: 2.5rem;
+  right: 1.7rem;
   cursor: pointer;
 }
 
@@ -1218,6 +1222,10 @@ footer {
   z-index: 1000;
 }
 
+.header-image-height {
+  height: 33rem;
+}
+
 @media (min-width:350px) {
 
   .header-margin{
@@ -1250,6 +1258,7 @@ footer {
 
   .hamburger-wrapper {
     top: 44%;
+    right: 17%;
   }
   
 }
@@ -1257,8 +1266,21 @@ footer {
 
 @media (min-width:450px) {
 
+  .header-margin{
+    margin-top: 24%;
+  }
+
   .header-logo-position {
-    padding-top: 6%;
+    padding-top: 5%;
+  }
+
+  .hamburger-wrapper {
+    top: 49%;
+    right: 16%;
+  }
+
+  .header-image-height {
+    height: 36rem;
   }
   
 }
@@ -1268,9 +1290,44 @@ footer {
   .header-margin{
     margin-top: 23%;
   }
+
+  .header-image-height {
+    height: 37rem;
+  }
+
+  .hamburger-wrapper {
+    top: 54%;
+    right: 15%;
+  }
   
 }
 
+
+@media (min-width:550px) {
+.header-image-height {
+  height: 40rem;
+}
+}
+
+@media (min-width:600px) {
+  .header-margin {
+    margin-top: 19%;
+  }
+
+  .header-image-height {
+    height: 42rem;
+  }
+
+  .header-logo-position {
+    padding-top: 4%;
+  }
+
+  .hamburger-wrapper {
+    top: 57%;
+    right: 12%;
+  }
+
+  }
 
 @media (min-width:640px) {
 
@@ -1290,8 +1347,12 @@ footer {
     padding: 2rem;
   }
 
-  .header-margin{
-    margin-top: 24%;
+  .header-margin {
+    margin-top: 19%;
+  }
+
+  .header-image-height {
+    height: 43rem;
   }
 
 }
@@ -1299,22 +1360,109 @@ footer {
 @media (min-width:700px) {
 
   .header-margin{
-    margin-top: 22%;
+    margin-top: 18%;
   }
 
 }
 
+@media (min-width:800px) {
+
+  .header-margin{
+    margin-top: 17%;
+  }
+
+  .hamburger-wrapper {
+    top: 62%;
+    right: 10%;
+  }
+
+}
+
+@media (min-width:850px) {
+
+  .header-margin{
+    margin-top: 16%;
+  }
+
+}
+
+
 @media (min-width:1024px) {
   .header-margin{
-    margin-top: 12%;
+    margin-top: 15%;
+  }
+
+  .hamburger-wrapper {
+    top: 62%;
+    right: 8%;
   }
   
 }
 
-@media (min-width:1536px) {
+@media (min-width:1100px) {
+  .header-margin{
+    margin-top: 14%;
+  }
+
+  .header-box {
+    margin-right: -7rem;}
+
+    .hamburger-wrapper {
+      right: 10%;
+    }
+
+}
+
+@media (min-width:1200px) {
+  
+  .header-logo-position {
+    padding-top: 3%;
+  }
+  
+  .header-margin{
+    margin-top: 12%;
+  }
+
+}
+
+@media (min-width:1300px) {
+  .header-margin{
+    margin-top: 11%;
+  }
+  
+}
+
+@media (min-width:1400px) {
+  .hamburger-wrapper {
+    right: 8%;
+  }
+  
+}
+
+
+@media (min-width:1500px) {
+  .header-logo-position {
+    padding-top: 2%;
+  }
+  
   .header-margin{
     margin-top: 9%;
   }
+
+  
+}
+
+@media (min-width:1600px) {
+
+  
+  .header-margin{
+    margin-top: 8%;
+  }
+
+  .header-image-height {
+    height: 45rem;
+  }
+
   
 }
 
@@ -1570,9 +1718,6 @@ footer {
   .xl\:mt-2p {
     margin-top: 2%;
   }
-  .xl\:h-\[45rem\] {
-    height: 45rem;
-  }
   .xl\:pb-0 {
     padding-bottom: 0px;
   }
@@ -1611,4 +1756,6 @@ footer {
     padding-top: 5%;
   }
 }
+
+
 
