--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -517,6 +517,9 @@ a {
 .mb-1p {
   margin-bottom: 1%;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .mb-20p {
   margin-bottom: 20%;
 }
@@ -589,6 +592,9 @@ a {
 .min-h-40 {
   min-height: 40vh;
 }
+.min-h-50 {
+  min-height: 50vh;
+}
 .w-44 {
   width: 11rem;
 }
@@ -628,11 +634,11 @@ a {
 .flex-col {
   flex-direction: column;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
-}
-.justify-start {
-  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -774,10 +780,6 @@ a {
   padding-top: 5%;
   padding-bottom: 5%;
 }
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -801,6 +803,9 @@ a {
 }
 .pb-5p {
   padding-bottom: 5%;
+}
+.pl-10p {
+  padding-left: 10%;
 }
 .pl-4 {
   padding-left: 1rem;
@@ -1108,6 +1113,12 @@ header {
   margin-left: 5%;
 }
 
+.footer-contact {
+  display: inline-block;
+  border-bottom: 2px solid #D2AE39;
+  width: auto;
+}
+
 .submenu a {
   font-size: 1.1rem; /* Slightly smaller for subpages */
 }
@@ -1159,6 +1170,15 @@ footer {
 .text-gray-300 {
   color: #B0BEC5; /* Light gray for footer text */
   margin-top: 1rem;
+}
+
+.footer-link,
+.footer-contact {
+  font-size: 1.1rem; /* Ensure all links have the same font size */
+  color: #FFFDFF; /* Light text color */
+  text-decoration: none;
+  padding: 0.5rem 0; /* Adjusted padding for cleaner look */
+  transition: color 0.3s;
 }
 
 /*Scroll to top button */ 
@@ -1589,6 +1609,10 @@ footer {
   .sm\:rounded-3xl {
     border-radius: 1.5rem;
   }
+  .sm\:px-5p {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
   .sm\:py-10p {
     padding-top: 10%;
     padding-bottom: 10%;
@@ -1611,6 +1635,9 @@ footer {
   }
   .sm\:pb-5p {
     padding-bottom: 5%;
+  }
+  .sm\:pl-0 {
+    padding-left: 0px;
   }
   .sm\:pl-5p {
     padding-left: 5%;
