--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,12 +1,15 @@
-<footer class="bg-dark-blue py-6">
-    <div class="max-w-screen-2xl mx-auto px-4">
-        <div class="sm:grid sm:grid-cols-3 gap-6">
+<footer class="bg-dark-blue pt-15p sm:pt-5p sm:px-5p">
+    <div class="max-w-screen-2xl mx-auto">
+        <div class="sm:grid sm:grid-cols-3 gap-6 pl-10p sm:pl-0">
             <!-- Column for the Logo -->
-            <div class="footer-logo mb-4 md:mb-0 flex justify-start">
-                <a href="/index.html" aria-label="Go to homepage">
-                    <img src="/images/logo-white-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-48">
+            <div class="footer-logo mb-4 md:mb-0 flex flex-col items-start"> <!-- Adjusted flex alignment -->
+                <a href="/index.html" aria-label="Go to homepage" class="mb-2">
+                  <img src="/images/logo-white-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-48">
                 </a>
-            </div>
+                <a href="/contact.html" class="text-white footer-contact pt-5p">
+                  Contact Us
+                </a>
+              </div>
 
             <!-- First Column for Links -->
             <div class="flex flex-col">
@@ -21,20 +24,18 @@
                         <a href="/skypark-aj-hackett.html" class="footer-link">Skypark by AJ Hackett</a>
                         <a href="/pondok-santi-estate.html" class="footer-link">Pondok Santi Estate</a>
                     </div>
-                    <a href="/experiences-aj-hackett.html" class="footer-link">Our Experiences</a>
+                    <a href="/experiences-aj-hackett.html" class="footer-link">Experiences</a>
+                    <a href="/projects.html" class="footer-link">Projects</a>
+                    <a href="/sustainability.html" class="footer-link">Sustainability</a>
                 </nav>
             </div>
 
             <!-- Second Column for Links -->
             <div class="flex flex-col">
                 <nav>
-                    <a href="/projects.html" class="footer-link">Projects</a>
-                    <a href="/sustainability.html" class="footer-link">Sustainability</a>
-                    <div class="submenu">
-                        <a href="/accessibility.html" class="footer-link">Accessibility</a>
-                        <a href="/reconciliation.html" class="footer-link">Reconciliation</a>
-                        <a href="/community.html" class="footer-link">Community</a>
-                    </div>
+                    <a href="/accessibility.html" class="footer-link">Accessibility</a>
+                    <a href="/reconciliation.html" class="footer-link">Reconciliation</a>
+                    <a href="/community.html" class="footer-link">Community</a>
                     <a href="/meet-the-team.html" class="footer-link">Get to Know Us</a>
                     <div class="submenu">
                         <a href="/meet-the-team.html" class="footer-link">Meet Our Team</a>
@@ -43,16 +44,14 @@
                         <a href="/purpose-promise-values.html#values" class="footer-link">Our Values</a>
                     </div>
                     <a href="/safety-management.html" class="footer-link">Safety Management</a>
-                    <a href="/contact.html" class="footer-link">Contact Us</a>
                 </nav>
             </div>
         </div>
 
         <!-- Centered Text for Copyright and Links -->
-        <div class="mt-4 text-center text-gray-300">
+        <div class="mt-4 text-center text-gray-300 pt-5p pb-5p">
             <p>&copy; 2024 AJ Hackett International. All rights reserved.</p>
-            <p>Privacy Policy | Terms and Conditions</p>
-            <a href="https://refinedislandcreations.com/" target="_blank" rel="noopener noreferrer" aria-label="Link to Refined Island Creations website design and development">Designed and built by <span class="underline">Refined Island Creations</span>.</a>
+            <a href="https://refinedislandcreations.com/" class="pt-5p" target="_blank" rel="noopener noreferrer" aria-label="Link to Refined Island Creations website design and development">Designed and built by <span class="underline">Refined Island Creations</span>.</a>
         </div>
     </div>
 </footer>
