--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,11 @@
 
     {% include scroll-to-top.html %}
     
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://unpkg.com/gsap@3.12.1/dist/gsap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
+    <script src="https://unpkg.com/gsap@3.12.1/dist/gsap.min.js" defer></script>
     <script src="//unpkg.com/alpinejs" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.1.8/lightgallery.min.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.1.8/lightgallery.min.js" defer></script>
+    <script src="/main.js" defer></script>
 
 
 </body>
