--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -4,7 +4,7 @@
             <img src="/images/logo-aj-hackett-international.png" alt="Logo of AJ Hackett International" class="w-44 sm:w-48">
         </a>
         
-        <div class="text-right">
+        <div class="text-right relative">
             <div class="hamburger-wrapper">
                 <div class="hamburger-menu">
                     <span></span>
