--- a/style.css
+++ b/style.css
@@ -327,9 +327,8 @@ footer {
 
 
 .header-box {
-  margin-right: -5rem; 
+  right: -5%; 
   margin-top: 40%; 
-  margin-left: 1%;
 }
 
 .header-margin{
@@ -475,11 +474,7 @@ footer {
 
 @media (min-width:640px) {
 
-  .header-box {
-    margin-right: -5rem; 
-    margin-top: 40%; 
-    margin-left: 30%;
-  }
+
 
   .logo {
     width: 60%; /* Logo size in mobile menu */
@@ -561,8 +556,7 @@ footer {
     margin-top: 14%;
   }
 
-  .header-box {
-    margin-right: -7rem;}
+ 
 
     .hamburger-wrapper {
       right: 10%;
