--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-dark-blue pt-15p sm:pt-5p sm:px-5p">
-    <div class="max-w-screen-2xl mx-auto">
+<footer class="max-w-screen-2xl mx-auto">
+    <div class="bg-dark-blue pt-15p sm:pt-5p sm:px-5p">
         <div class="sm:grid sm:grid-cols-3 gap-6 pl-10p sm:pl-0">
             <!-- Column for the Logo -->
             <div class="footer-logo mb-4 md:mb-0 flex flex-col items-start"> <!-- Adjusted flex alignment -->
