--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -61,7 +61,7 @@
     <div class="bg-cover bg-no-repeat rounded-3xl relative mx-5p header-image-height" 
      style="background-image: url('{{ item.image }}'); background-position: {{ item.position }};"
      alt="{{ item.label | default: item.title }}">
-        <div class="flex flex-col justify-end h-full p-5">
+        <div class="flex flex-col justify-end xl:justify-start h-full p-5">
             <div class="bg-dark-blue p-5 relative header-box">
                 <div style="margin-right: 10%;">
                     <h1 class="header-font text-2xl sm:text-4xl md:text-5xl lg:text-6xl pb-2p">{{ item.title }}</h1>
