--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1489,9 +1489,15 @@ footer {
   .header-margin{
     margin-top: 9%;
   }
-
   
 }
+
+@media (min-width:1280px) {
+.header-box {
+  margin-top: 35%;
+}
+}
+
 
 @media (min-width:1600px) {
 
@@ -1507,16 +1513,19 @@ footer {
   
 }
 
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
 
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1524,9 +1533,11 @@ footer {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
+
 
 @media (min-width: 640px) {
   .sm\:order-none {
@@ -1674,6 +1685,7 @@ footer {
   }
 }
 
+
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
@@ -1710,6 +1722,7 @@ footer {
     line-height: 1;
   }
 }
+
 
 @media (min-width: 1024px) {
   .lg\:my-5p {
@@ -1750,6 +1763,7 @@ footer {
   }
 }
 
+
 @media (min-width: 1280px) {
   .xl\:mb-10p {
     margin-bottom: 10%;
@@ -1782,6 +1796,7 @@ footer {
     padding-top: 5%;
   }
 }
+
 
 @media (min-width: 1536px) {
   .\32xl\:mt-1p {
