--- a/style.css
+++ b/style.css
@@ -608,6 +608,12 @@ footer {
 }
 }
 
+@media (min-width:1536px) {
+  .header-box {
+    margin-top: 30%;
+  }
+  }
+
 
 @media (min-width:1600px) {
 
