--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -486,10 +486,6 @@ a {
 .col-span-full {
   grid-column: 1 / -1;
 }
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 .mx-5p {
   margin-left: 5%;
   margin-right: 5%;
@@ -555,9 +551,6 @@ a {
 }
 .block {
   display: block;
-}
-.inline-block {
-  display: inline-block;
 }
 .flex {
   display: flex;
@@ -684,9 +677,6 @@ a {
 }
 .overflow-x-auto {
   overflow-x: auto;
-}
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 .rounded-3xl {
   border-radius: 1.5rem;
@@ -864,6 +854,9 @@ a {
 .uppercase {
   text-transform: uppercase;
 }
+.italic {
+  font-style: italic;
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -916,6 +909,8 @@ body {
     color:  #033357; 
     font-family: "Source Sans 3", sans-serif;
     overflow-x: hidden;
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
 }
 
 /* Ensure max-width and centering for larger screens */
@@ -966,6 +961,12 @@ header {
   background-color: #033357; 
   color: #FFFDFF; 
 }
+
+.bg-dark-blue-transparent {
+  background-color: #033357b5;
+  color: #FFFDFF; 
+}
+
 
 .bg-grey {
   background-color: #F3F1EF; 
@@ -1403,6 +1404,10 @@ footer {
     margin-top: 18%;
   }
 
+  body {
+    font-size: 1.1rem; /* 16px */
+}
+
 }
 
 @media (min-width:800px) {
@@ -1564,9 +1569,6 @@ footer {
   .sm\:mb-10p {
     margin-bottom: 10%;
   }
-  .sm\:mb-5p {
-    margin-bottom: 5%;
-  }
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -1578,9 +1580,6 @@ footer {
   }
   .sm\:mt-2p {
     margin-top: 2%;
-  }
-  .sm\:mt-30p {
-    margin-top: 30%;
   }
   .sm\:mt-5p {
     margin-top: 5%;
@@ -1659,9 +1658,6 @@ footer {
   }
   .sm\:pr-5p {
     padding-right: 5%;
-  }
-  .sm\:pt-0 {
-    padding-top: 0px;
   }
   .sm\:pt-10p {
     padding-top: 10%;
@@ -1776,9 +1772,6 @@ footer {
   }
   .xl\:mb-5p {
     margin-bottom: 5%;
-  }
-  .xl\:mt-0 {
-    margin-top: 0px;
   }
   .xl\:mt-2p {
     margin-top: 2%;
