--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     color:  #033357; 
     font-family: "Source Sans 3", sans-serif;
     overflow-x: hidden;
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
 }
 
 /* Ensure max-width and centering for larger screens */
@@ -76,6 +78,12 @@ header {
   background-color: #033357; 
   color: #FFFDFF; 
 }
+
+.bg-dark-blue-transparent {
+  background-color: #033357b5;
+  color: #FFFDFF; 
+}
+
 
 .bg-grey {
   background-color: #F3F1EF; 
@@ -512,6 +520,10 @@ footer {
   .header-margin{
     margin-top: 18%;
   }
+
+  body {
+    font-size: 1.1rem; /* 16px */
+}
 
 }
 
