--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -660,6 +660,11 @@ a {
 .gap-y-5 {
   row-gap: 1.25rem;
 }
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -932,9 +937,37 @@ header {
 .mobile-menu {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
+    height: 100vh;
     z-index: 50;
     background:  #FFFDFF; 
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.nav-item {
+  padding: 5px 10px;
+  margin: 0;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Dropdown Styles */
+.group:hover .group-hover\:block {
+  display: block;
+  position: absolute;
+  min-width: 200px;
+  background-color: white;
+  z-index: 10;
+}
+
+.nav-item:hover {
+  background-color: #f3f3f3;
+  border-radius: 4px;
 }
 
 .header-bg {
@@ -1055,7 +1088,10 @@ header {
 .g-bg-pos-l { background-position: left; }
 .g-bg-pos-r { background-position: right; }
 
+
+
 .hamburger-menu {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1064,9 +1100,11 @@ header {
 }
 
 .hamburger-menu span {
-  background-color: #033357;
-  height: 4px;
+  display: block;
   width: 100%;
+  height: 4px;
+  margin: 4px 0;
+  background: #033357;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -1550,6 +1588,11 @@ footer {
 }
 
 
+.group:hover .group-hover\:block {
+  display: block;
+}
+
+
 @media (min-width: 640px) {
   .sm\:order-none {
     order: 0;
@@ -1733,6 +1776,12 @@ footer {
   }
   .lg\:mb-5p {
     margin-bottom: 5%;
+  }
+  .lg\:flex {
+    display: flex;
+  }
+  .lg\:hidden {
+    display: none;
   }
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
