--- a/style.css
+++ b/style.css
@@ -49,9 +49,41 @@ header {
 .mobile-menu {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
+    height: 100vh;
     z-index: 50;
     background:  #FFFDFF; 
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.nav-item {
+  padding: 5px 10px;
+  margin: 0;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Dropdown Styles */
+.group:hover .group-hover\:block {
+  display: block;
+}
+
+.group:hover .group-hover\:block {
+  display: block;
+  position: absolute;
+  min-width: 200px;
+  background-color: white;
+  z-index: 10;
+}
+
+.nav-item:hover {
+  background-color: #f3f3f3;
+  border-radius: 4px;
 }
 
 .header-bg {
@@ -172,7 +204,10 @@ header {
 .g-bg-pos-l { background-position: left; }
 .g-bg-pos-r { background-position: right; }
 
+
+
 .hamburger-menu {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -181,9 +216,11 @@ header {
 }
 
 .hamburger-menu span {
-  background-color: #033357;
-  height: 4px;
+  display: block;
   width: 100%;
+  height: 4px;
+  margin: 4px 0;
+  background: #033357;
   transition: transform 0.3s ease-in-out;
 }
 
